@@ -1,3 +1,8 @@
+2015-07-02 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVReader.m
+        More extensive rewrite to handle qualifiers and escaped qualifiers
+      
 2015-06-25 Riccardo Mottola <rm@gnu.org>
 
 	* DBCSVReader.m
